--- a/public/recipeList.css
+++ b/public/recipeList.css
@@ -8,7 +8,7 @@ body{
     display:flex;
     flex-direction:column;
     align-items: center;
-    width:100%;
+
     align-self:center;
 }
 
